--- a/package.json
+++ b/package.json
@@ -1,38 +1,18 @@
 {
-  "name": "cat-project",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "dependencies": {
+        "@ijl/cli": "^5.0.3-beta.0",
+        "@types/react": "^18.0.33",
+        "@types/react-dom": "^18.0.11",
+        "express": "^4.18.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^5.0.4"
+    },
+    "main": "./src/index.tsx",
+    "scripts": {
+        "start": "ijl-cli server --port=8099 --with-open-browser",
+        "build": "npm run clean && ijl-cli build --dev",
+        "build:prod": "npm run clean && ijl-cli build",
+        "clean": "rimraf dist"
+    }
 }
