--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/react-dom": "^17.0.18",
         "antd": "^5.4.2",
         "express": "^4.18.2",
+        "lightweight-charts": "^4.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.10.0",
