--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
         "@types/react": "^18.0.33",
         "@types/react-dom": "^18.0.11",
         "antd": "^5.4.2",
+        "apollo-cache-inmemory": "^1.6.6",
+        "apollo-client": "^2.6.10",
+        "apollo-link-http": "^1.5.17",
         "express": "^4.18.2",
+        "graphql-tag": "^2.12.6",
         "lightweight-charts": "^4.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
