--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "start": "ijl-cli server --port=8099 --with-open-browser",
         "build": "npm run clean && ijl-cli build --dev",
         "build:prod": "npm run clean && ijl-cli build",
-        "clean": "rimraf dist"
+        "clean": "rimraf dist",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -35,5 +36,13 @@
     "bugs": {
         "url": "https://github.com/nikolina2k/cat-project/issues"
     },
-    "homepage": "https://github.com/nikolina2k/cat-project#readme"
+    "homepage": "https://github.com/nikolina2k/cat-project#readme",
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
+        "@types/jest": "^29.5.1",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
+        "ts-jest": "^29.1.0"
+    }
 }
