--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "jsx": "react",
         "typeRoots": ["node_modules/@types", "src/typings"],
         "types" : ["webpack-env", "node"],
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "allowJs": true
     },
     "exclude": [
         "node_modules",
