Change project name to match the name on deployment server

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cat-project",
+    "name": "cat",
     "version": "1.0.0",
     "dependencies": {
         "@ant-design/icons": "^5.0.1",
